--- a/public/css/estilosagenda.css
+++ b/public/css/estilosagenda.css
@@ -3,12 +3,13 @@
 	body {
 		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
 		font-size: 14px;
+		position: relative;
 	}
    
 
 	.header{
-	 background: #7A57D1;
-     color: #446;
+	 background: #0DCEDA;
+     color: #303A52;
      top: 0;
      margin-bottom: 50px;
 	}
@@ -69,7 +70,7 @@ footer{background: #303841; display: flex; flex-direction: row nowrap; align-ite
 
 .enlaces-registros{color: #fff;}
   .enlaces-registros a{color:#222831; font-weight: 5px;}
-  .enlaces-registros a:hover{background:#EEEEEE; color:#222831; }
+  .enlaces-registros a:hover{background:#303A52; color:#F0F5F9; }
 
 /* Estilos formulario de administradores */
 
