--- a/public/css/estilosagenda.css
+++ b/public/css/estilosagenda.css
@@ -8,17 +8,23 @@
    
 
 	.header{
-	 background: #0DCEDA;
-     color: #303A52;
+	 background: #6A2C70;
+     color: #F8F3D4;
      top: 0;
      margin-bottom: 50px;
 	}
+
+	.color_dipra{
+	background: #6A2C70;
+     color: #F8F3D4;}
+
+
 		.logo{display: flex; flex-direction: row nowrap; align-items: center; justify-content: center;}
 			.logo img{width: 70%;}
 		.titulo{ display: flex; flex-direction: row nowrap; align-items: center; justify-content:center;}
 			.titulo h4{text-align: center;}
-		.sesion{display: flex; flex-direction: row nowrap; align-items: center; color: #432C51; font-size: 20px; justify-content: center;}
-			.sesion i{color: #432C51; font-size: 40px;  margin-right: 10px; }
+		.sesion{display: flex; flex-direction: row nowrap; align-items: center; color: #432C51; font-size: 14px; justify-content: center;}
+			.sesion i{color: #432C51; font-size: 30px;  margin-right: 10px; }
 			
 
 	.formulario{ max-width: 900px; padding: 15px; margin-bottom: 50px;  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
